// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readAllIncoming: 1) initial 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {
        [Function],
        [Function],
      },
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {
        [Function],
        [Function],
      },
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`readAllIncoming: 2) read all incoming 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`readAllIncoming: 3) hello 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "hello",
      },
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`readAllIncoming: 4) read all incoming 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 4,
    },
    "b": Object {
      "value": "bye",
    },
  },
}
`;

exports[`send message to itself: 1) initial 1`] = `
Object {
  "meta": ActorPrivateMeta {
    "handlers": Set {},
    "incoming": Set {},
    "keepBy": null,
    "keeperFor": WeakMap {},
    "newHandlers": Set {},
    "newIncoming": Set {},
  },
  "state": Object {
    "value": "A",
  },
}
`;

exports[`send message to itself: 2) hello 1`] = `
Object {
  "meta": ActorPrivateMeta {
    "handlers": Set {},
    "incoming": Set {},
    "keepBy": null,
    "keeperFor": WeakMap {},
    "newHandlers": Set {
      [Function],
    },
    "newIncoming": Set {
      "hello",
    },
  },
  "state": Object {
    "value": "A",
  },
}
`;

exports[`send message to itself: 3) read incoming 1`] = `
Object {
  "meta": ActorPrivateMeta {
    "handlers": Set {
      [Function],
    },
    "incoming": Set {
      "A",
      "how r u",
    },
    "keepBy": null,
    "keeperFor": WeakMap {},
    "newHandlers": Set {},
    "newIncoming": Set {},
  },
  "state": Object {
    "value": "A",
  },
}
`;

exports[`talk: 1) initial 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {
        [Function],
        [Function],
      },
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {
        [Function],
        [Function],
      },
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`talk: 2) read incoming (both) 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 0,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`talk: 3) hello 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "hi",
      },
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 1,
    },
    "b": Object {
      "value": "none",
    },
  },
}
`;

exports[`talk: 4) read incoming 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "I'm fine",
      },
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 3,
    },
    "b": Object {
      "value": "fine",
    },
  },
}
`;

exports[`talk: 5) read incoming 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {
        [Function],
        [Function],
      },
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "count": 4,
    },
    "b": Object {
      "value": "bye",
    },
  },
}
`;

exports[`to another actor: 1) initial 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "value": "A",
    },
    "b": Object {
      "value": "B",
    },
  },
}
`;

exports[`to another actor: 2) hello 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "hello",
      },
    },
  },
  "state": Object {
    "a": Object {
      "value": "A",
    },
    "b": Object {
      "value": "B",
    },
  },
}
`;

exports[`to another actor: 3) how r u 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "hello",
        "how r u",
      },
    },
  },
  "state": Object {
    "a": Object {
      "value": "A",
    },
    "b": Object {
      "value": "B",
    },
  },
}
`;

exports[`to another actor: 4) read incoming A 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {
        "hello",
        "how r u",
      },
    },
  },
  "state": Object {
    "a": Object {
      "value": "A",
    },
    "b": Object {
      "value": "B",
    },
  },
}
`;

exports[`to another actor: 5) read incoming B 1`] = `
Object {
  "meta": Object {
    "a": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
    "b": ActorPrivateMeta {
      "handlers": Set {},
      "incoming": Set {},
      "keepBy": null,
      "keeperFor": WeakMap {},
      "newHandlers": Set {},
      "newIncoming": Set {},
    },
  },
  "state": Object {
    "a": Object {
      "value": "A",
    },
    "b": Object {
      "value": "B",
    },
  },
}
`;
